--- a/css/main.css
+++ b/css/main.css
@@ -108,6 +108,13 @@ img {
   padding-bottom: 94px;
 }
 
+@media screen and (max-width: 1199px) {
+  .section {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
+
 .modal-btn {
   background: #ffffff;
   border: 1px solid rgba(0, 0, 0, 0.1);
@@ -877,17 +884,56 @@ img {
   text-align: center;
 }
 
+.title {
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.team {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -15px;
+}
+
 .team-info {
   padding-top: 30px;
   padding-bottom: 30px;
 }
 
 .team-images {
-  flex-basis: calc(100% / 4 - 270px);
-  margin-left: 30px;
   background: #ffffff;
+  margin-left: 15px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+}
+
+@media screen and (max-width: 767px) {
+  .team-images:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (max-width: 767px) and (min-width: 768px) {
+  .team-images {
+    margin: 15px;
+    flex-basis: calc((100%-60px) / 2);
+  }
+}
+
+@media screen and (max-width: 767px) and (min-width: 1200px) {
+  .team-images {
+    flex-basis: calc((100% - 120px) / 4);
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .team-images {
+    max-width: 100%;
+  }
+}
+
+.team-images:not(:last-child) {
+  margin-bottom: 30px;
 }
 
 .team .text,
