--- a/scss/layout/_team.scss
+++ b/scss/layout/_team.scss
@@ -10,15 +10,16 @@
   text-align: center;
 }
 
-// .title {
-//   text-align: center;
-//   margin-bottom: 10px;
-// }
+.title {
+  text-align: center;
+  margin-bottom: 10px;
+}
 
-// .team {
-//   display: flex;
-//   margin-left: -30px;
-// }
+.team {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -15px;
+}
 
 .team-info {
   padding-top: 30px;
@@ -26,11 +27,31 @@
 }
 
 .team-images {
-  flex-basis: calc(100% / 4 - 270px);
-  margin-left: 30px;
   background: #ffffff;
+  margin-left: 15px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+
+  @media screen and (max-width: 767px) {
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
+    @media screen and (min-width: 768px) {
+      margin: 15px;
+      flex-basis: calc((100%-60px) / 2);
+    }
+    @media screen and (min-width: 1200px) {
+      flex-basis: calc((100% - 120px) / 4);
+    }
+  }
+
+  @media screen and (max-width: 1199px) {
+    max-width: 100%;
+  }
+}
+
+.team-images:not(:last-child) {
+  margin-bottom: 30px;
 }
 
 .team .text,
