--- a/css/main.css
+++ b/css/main.css
@@ -922,7 +922,12 @@ img {
 .team {
   display: flex;
   flex-wrap: wrap;
-  margin-left: -15px;
+}
+
+@media screen and (max-width: 767px) {
+  .team {
+    margin-left: -15px;
+  }
 }
 
 @media screen and (min-width: 1199px) {
@@ -952,6 +957,13 @@ img {
   border-radius: 0px 0px 4px 4px;
 }
 
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .team-images {
+    width: calc((100% - 2 * 30px) / 2);
+    margin: 15px;
+  }
+}
+
 @media screen and (min-width: 1199px) {
   .team-images {
     flex-basis: calc(100% / 4 - 270px);
@@ -969,6 +981,15 @@ img {
 
 .section-team {
   background: #f5f4fa;
+}
+
+.clients-list {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.clients-item:not(:last-child) {
+  margin-right: 30px;
 }
 
 .clients-after-items {
@@ -989,6 +1010,9 @@ img {
 .clients-link {
   width: 100%;
   height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   fill: #afb1b8;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
