--- a/scss/layout/_clients.scss
+++ b/scss/layout/_clients.scss
@@ -1,10 +1,11 @@
-// .clients-list {
-//   display: flex;
-// }
+.clients-list {
+  display: flex;
+  flex-wrap: wrap;
+}
 
-// .clients-item:not(:last-child) {
-//   margin-right: 30px;
-// }
+.clients-item:not(:last-child) {
+  margin-right: 30px;
+}
 
 .clients-after-items {
   width: 170px;
@@ -25,9 +26,9 @@
 .clients-link {
   width: 100%;
   height: 100%;
-  // display: flex;
-  // align-items: center;
-  // justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   fill: #afb1b8;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
