--- a/css/main.css
+++ b/css/main.css
@@ -848,10 +848,19 @@ img {
 }
 
 .section-title {
-  font-size: 36px;
-  line-height: 1.16;
+  font-size: 28px;
+  line-height: 1.17px;
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
+}
+
+@media screen and (min-width: 1199px) {
+  .section-title {
+    font-size: 36px;
+    line-height: 1.16;
+    letter-spacing: 0.03em;
+    color: var(--primary-text-color);
+  }
 }
 
 .title-features {
@@ -861,7 +870,13 @@ img {
 .section-title {
   display: flex;
   justify-content: center;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
+}
+
+@media screen and (min-width: 1199px) {
+  .section-title {
+    margin-bottom: 50px;
+  }
 }
 
 .directions-name {
