--- a/scss/layout/_directions.scss
+++ b/scss/layout/_directions.scss
@@ -1,8 +1,15 @@
 .section-title {
-  font-size: 36px;
-  line-height: 1.16;
+  font-size: 28px;
+  line-height: 1.17px;
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
+
+  @media screen and (min-width: 1199px) {
+    font-size: 36px;
+    line-height: 1.16;
+    letter-spacing: 0.03em;
+    color: var(--primary-text-color);
+  }
 }
 
 .title-features {
@@ -12,7 +19,11 @@
 .section-title {
   display: flex;
   justify-content: center;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
+
+  @media screen and (min-width: 1199px) {
+    margin-bottom: 50px;
+  }
 }
 
 .directions-name {
