--- a/css/main.css
+++ b/css/main.css
@@ -1024,6 +1024,12 @@ img {
   margin: 15px;
 }
 
+@media screen and (max-width: 767px) {
+  .clients-item {
+    flex-basis: calc((100% - 2 * 30px) / 2);
+  }
+}
+
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .clients-item {
     flex-basis: calc((100% - 3 * 30px) / 3);
