--- a/css/main.css
+++ b/css/main.css
@@ -1120,6 +1120,40 @@ img {
   border-radius: 4px;
 }
 
+.buttons {
+  display: flex;
+  margin-bottom: 50px;
+}
+
+@media screen and (min-width: 768px) {
+  .buttons {
+    justify-content: center;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .buttons {
+    flex-wrap: wrap;
+    margin: -7px -4px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .buttons-container {
+    margin-bottom: 40px;
+  }
+}
+
+.button-btn:not(:last-child) {
+  margin-right: 8px;
+}
+
+@media screen and (max-width: 767px) {
+  .button-btn {
+    margin: 7px 4px;
+  }
+}
+
 .project-content:hover {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
@@ -1151,6 +1185,7 @@ img {
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
+  margin-bottom: 4px;
 }
 
 .project-content:hover .project-info-title {
@@ -1163,6 +1198,21 @@ img {
   line-height: 1.87;
   letter-spacing: 0.03em;
   color: var(--title-text-color);
+}
+
+.projects {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.project-content {
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (max-width: 767px) {
+  .project-content {
+    margin-bottom: 30px;
+  }
 }
 
 .project-name {
