--- a/scss/layout/_portfolio.scss
+++ b/scss/layout/_portfolio.scss
@@ -48,15 +48,36 @@
   border-radius: 4px;
 }
 
-// .buttons {
-//   display: flex;
-//   justify-content: center;
-//   margin-bottom: 50px;
-// }
+.buttons {
+  display: flex;
 
-// .button-btn:not(:last-child) {
-//   margin-right: 8px;
-// }
+  margin-bottom: 50px;
+
+  @media screen and (min-width: 768px) {
+    justify-content: center;
+  }
+
+  @media screen and (max-width: 767px) {
+    flex-wrap: wrap;
+    margin: -7px -4px;
+  }
+}
+
+.buttons-container {
+  @media screen and (max-width: 767px) {
+    margin-bottom: 40px;
+  }
+}
+
+.button-btn:not(:last-child) {
+  margin-right: 8px;
+}
+
+.button-btn {
+  @media screen and (max-width: 767px) {
+    margin: 7px 4px;
+  }
+}
 
 .project-content:hover {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
@@ -89,7 +110,7 @@
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
-  // margin-bottom: 4px;
+  margin-bottom: 4px;
 }
 
 .project-content:hover .project-info-title {
@@ -104,19 +125,22 @@
   color: var(--title-text-color);
 }
 
-// .projects {
-//   display: flex;
-//   flex-wrap: wrap;
-//   margin-left: -30px;
-//   margin-top: -30px;
-// }
+.projects {
+  display: flex;
+  flex-wrap: wrap;
+  // margin-left: -30px;
+  // margin-top: -30px;
+}
 
-// .project-content {
-//   flex-basis: calc((100% - 3 * 30px) / 9);
-//   margin-left: 30px;
-//   margin-top: 30px;
-//   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-// }
+.project-content {
+  // flex-basis: calc((100% - 3 * 30px) / 3);
+  // margin-left: 30px;
+  // margin-top: 30px;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  @media screen and (max-width: 767px) {
+    margin-bottom: 30px;
+  }
+}
 
 .project-name {
   padding-left: 24px;
