--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -186,7 +186,7 @@
   @media screen and (max-width: 767px) {
     display: flex;
     flex-direction: column;
-    // align-items: center;
+    align-items: center;
     // justify-content: center;
     // flex-wrap: wrap;
   }
