--- a/css/main.css
+++ b/css/main.css
@@ -1241,6 +1241,12 @@ img {
   color: var(--hover-color);
 }
 
+@media screen and (max-width: 767px) {
+  .footer-adress-container {
+    margin-bottom: 60px;
+  }
+}
+
 .logo-white {
   color: var(--accent-color);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1307,6 +1313,7 @@ img {
 }
 
 .adress-info {
+  margin-bottom: 9px;
   text-decoration: none;
   font-size: 14px;
   line-height: 1.17;
