--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -7,6 +7,12 @@
   color: var(--hover-color);
 }
 
+.footer-adress-container {
+  @media screen and (max-width: 767px) {
+    margin-bottom: 60px;
+  }
+}
+
 .logo-white {
   color: var(--accent-color);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -75,7 +81,7 @@
 }
 
 .adress-info {
-  // margin-bottom: 9px;
+  margin-bottom: 9px;
   text-decoration: none;
   font-size: 14px;
   line-height: 1.17;
