--- a/css/main.css
+++ b/css/main.css
@@ -1372,7 +1372,6 @@ img {
 .footer-btn {
   width: 200px;
   height: 50px;
-  margin-left: 12px;
   padding-left: 29px;
   padding-right: 62px;
   padding-top: 10px;
@@ -1391,6 +1390,19 @@ img {
 .footer-btn:hover, .footer-btn:focus {
   background: #188ce8;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-btn {
+    margin-left: 12px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .footer-btn {
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 .icon-telegram {
