--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -138,7 +138,6 @@
 .footer-btn {
   width: 200px;
   height: 50px;
-  margin-left: 12px;
   padding-left: 29px;
   padding-right: 62px;
   padding-top: 10px;
@@ -157,6 +156,15 @@
   &:focus {
     background: #188ce8;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-left: 12px;
+  }
+
+  @media screen and (max-width: 767px) {
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
@@ -193,8 +201,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    // justify-content: center;
-    // flex-wrap: wrap;
   }
 }
 
