--- a/css/main.css
+++ b/css/main.css
@@ -510,6 +510,13 @@ img {
   color: var(--hover-color);
 }
 
+@media screen and (max-width: 1199px) {
+  .site-navigation__logo {
+    font-size: 24px;
+    line-height: 1.16;
+  }
+}
+
 .page-header {
   border-bottom: 1px solid #ececec;
 }
