--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -62,6 +62,11 @@
   line-height: 1.2;
   letter-spacing: 0.03em;
   color: var(--hover-color);
+
+  @media screen and (max-width: 1199px) {
+    font-size: 24px;
+    line-height: 1.16;
+  }
 }
 
 .page-header {
