--- a/css/main.css
+++ b/css/main.css
@@ -1184,6 +1184,7 @@ img {
   padding-left: 24px;
   padding-right: 24px;
   height: 100%;
+  flex-grow: 1;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -1238,6 +1239,8 @@ img {
   .project-content {
     flex-basis: calc((100% - 2 * 30px) / 2);
     margin: 15px;
+    display: flex;
+    flex-direction: column;
   }
 }
 
@@ -1256,6 +1259,7 @@ img {
   border-bottom: 1px solid #eeeeee;
   border-left: 1px solid #eeeeee;
   background: #ffffff;
+  flex-grow: 1;
 }
 
 .footer-logo {
