--- a/scss/layout/_portfolio.scss
+++ b/scss/layout/_portfolio.scss
@@ -97,6 +97,7 @@
   padding-left: 24px;
   padding-right: 24px;
   height: 100%;
+  flex-grow: 1;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -145,6 +146,8 @@
   @media screen and (min-width: 768px) and (max-width: 1199px) {
     flex-basis: calc((100% - 2 * 30px) / 2);
     margin: 15px;
+    display: flex;
+    flex-direction: column;
   }
 
   @media screen and (max-width: 767px) {
@@ -163,4 +166,5 @@
   border-bottom: 1px solid #eeeeee;
   border-left: 1px solid #eeeeee;
   background: #ffffff;
+  flex-grow: 1;
 }
