--- a/css/main.css
+++ b/css/main.css
@@ -1420,6 +1420,7 @@ img {
 }
 
 .input-mail-footer {
+  width: 450px;
   padding-left: 16px;
   padding-right: 16px;
   padding-top: 15px;
@@ -1441,7 +1442,7 @@ img {
 
 @media screen and (max-width: 1199px) {
   .input-mail-footer {
-    width: 450px;
+    width: 100%;
     margin-bottom: 20px;
   }
 }
