--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -138,13 +138,15 @@
 }
 
 .input-mail-footer {
+  width: 450px;
+
   @media screen and (min-width: 1200px) {
     width: 358px;
     height: 50px;
   }
 
   @media screen and (max-width: 1199px) {
-    width: 450px;
+    width: 100%;
     margin-bottom: 20px;
   }
 
