--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -138,7 +138,7 @@
 }
 
 .input-mail-footer {
-  // max-width: 450px;
+  max-width: 450px;
 
   @media screen and (min-width: 1200px) {
     width: 358px;
@@ -146,7 +146,7 @@
   }
 
   @media screen and (max-width: 1199px) {
-    // width: 450px;
+    width: 450px;
     margin-bottom: 20px;
   }
 
