--- a/css/main.css
+++ b/css/main.css
@@ -216,6 +216,7 @@ img {
   position: fixed;
   top: 0;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  overflow-y: scroll;
 }
 
 .backdrop.is-hidden {
@@ -714,7 +715,6 @@ img {
   background-color: var(--primary-text-color);
   max-width: 1600px;
   padding: 200px 0px;
-  height: 600px;
   text-align: center;
   margin-left: auto;
   margin-right: auto;
@@ -727,6 +727,19 @@ img {
 @media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
   .hero {
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero/hero-desktop2x.jpg");
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .hero {
+    padding-top: 118px;
+    padding-bottom: 118px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero {
+    height: 600px;
   }
 }
 
@@ -1157,7 +1170,7 @@ img {
 
 .buttons {
   display: flex;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
 }
 
 @media screen and (min-width: 768px) {
@@ -1242,6 +1255,12 @@ img {
 }
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
+  .projects {
+    margin: -15px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
   .projects {
     margin: -15px;
   }
