--- a/scss/layout/_hero.scss
+++ b/scss/layout/_hero.scss
@@ -18,7 +18,7 @@
   background-color: var(--primary-text-color);
   max-width: 1600px;
   padding: 200px 0px;
-  height: 600px;
+
   text-align: center;
   margin-left: auto;
   margin-right: auto;
@@ -33,6 +33,15 @@
     (min-resolution: 2dppx) {
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
       url('../images/hero/hero-desktop2x.jpg');
+  }
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    padding-top: 118px;
+    padding-bottom: 118px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    height: 600px;
   }
 
   @media screen and (max-width: 768px) {
