--- a/scss/layout/_portfolio.scss
+++ b/scss/layout/_portfolio.scss
@@ -51,7 +51,7 @@
 .buttons {
   display: flex;
 
-  margin-bottom: 50px;
+  margin-bottom: 30px;
 
   @media screen and (min-width: 768px) {
     justify-content: center;
@@ -131,6 +131,10 @@
   flex-wrap: wrap;
 
   @media screen and (min-width: 768px) and (max-width: 1199px) {
+    margin: -15px;
+  }
+
+  @media screen and (min-width: 1200px) {
     margin: -15px;
   }
 }
